Project structure working, updating proto errors definitions
